# vcni

./: .env.example  .gitignore  README.md  docker-compose.yml
ML/inference/: classifier_inference.py
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  pytest.ini
backend/app/: classifier_client.py  config.py  context.py  controller.py  intent_slots.py  intent_to_ui.py  main.py  models.py  state_store.py  tool_executor.py
backend/app/services/: __init__.py  gemini_service.py  groq_service.py  iot_service.py  music_service.py  search_service.py  weather_service.py
backend/tests/: conftest.py  test_context.py  test_controller.py
frontend/: .dockerignore  Dockerfile  astro.config.docker.mjs  package-lock.json  package.json  photo-theme.txt  wix.config.json
frontend/public/audio-worklet/: assemblyai-processor.js
frontend/src/: appSpec.json  env.d.ts  tailwind.config.mjs
frontend/src/components/: ActionZone.tsx  Footer.tsx  Head.tsx  Header.tsx  Router.tsx  TranscriptFeed.tsx
frontend/src/components/pages/: HomePage.tsx
frontend/src/components/widgets/: AIResponseWidget.tsx  DefaultWidget.tsx  MusicWidget.tsx  SmartHomeWidget.tsx  WeatherWidget.tsx
frontend/src/entities/: actionwidgets.d.ts  commandhistory.d.ts  index.ts
frontend/src/pages/api/assemblyai/: token.ts
frontend/src/pages/api/nlu/: process.ts
frontend/src/pages/api/tts/: stream.ts
frontend/src/store/: TTSService.ts  TokenManager.ts  VoiceClient.ts  index.ts  types.ts
frontend/src/styles/: fonts.css
